[gd_scene load_steps=3 format=3 uid="uid://du6i80a8pitl6"]

[ext_resource type="Script" path="res://Scripts/ui.gd" id="1_prhxi"]
[ext_resource type="FontFile" uid="uid://cnxpdlmys4cvg" path="res://Assets/Fonts/PressStart2P-Regular.ttf" id="2_sxu2q"]

[node name="UILayer" type="CanvasLayer"]
script = ExtResource("1_prhxi")

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 32
theme_override_constants/margin_top = 32
theme_override_constants/margin_right = 32
theme_override_constants/margin_bottom = 32

[node name="LivesContaier" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0

[node name="ScoreContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 8

[node name="Score" type="Label" parent="MarginContainer/ScoreContainer"]
layout_mode = 2
size_flags_vertical = 0
theme_override_fonts/font = ExtResource("2_sxu2q")
theme_override_font_sizes/font_size = 20
text = "0"

[node name="MarginContainer2" type="MarginContainer" parent="."]
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -32.0
offset_bottom = 32.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 32
theme_override_constants/margin_top = 32
theme_override_constants/margin_right = 32
theme_override_constants/margin_bottom = 32

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer2"]
layout_mode = 2
theme_override_constants/separation = 25

[node name="GameOverLabel" type="Label" parent="MarginContainer2/VBoxContainer"]
visible = false
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
theme_override_fonts/font = ExtResource("2_sxu2q")
theme_override_font_sizes/font_size = 50
text = "Game Over!"
horizontal_alignment = 1

[node name="PlayTime" type="Label" parent="MarginContainer2/VBoxContainer"]
visible = false
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
theme_override_fonts/font = ExtResource("2_sxu2q")
theme_override_font_sizes/font_size = 25
text = "Playtime: 0.0"
horizontal_alignment = 1
